# uav-agri-hexacopter-bihar

./: .gitignore  Dockerfile  FLIGHT_CHECKLIST.md  GIT_GUIDELINES.md  LAUNCH_GUIDE.md  LEARNING_JOURNEY.md  LICENSE  MANUAL_FLIGHT_GUIDE.md  PROJECT_LITERATURE.md  PROJECT_PROGRESS.md  README.md  README_USER.md  TROUBLESHOOTING.md  check_install.py  clean_build.sh  clean_python_nodes.py  entrypoint.sh  final_launch.sh  finalize_setup.sh  fix_build.sh  force_fix_python.py  install.sh  launch_drone.sh  launch_lab.sh  launch_sim_only.sh  launch_split.sh  launch_system.sh  mission_commander.py  mission_sprayer.py  model.sdf  model_inference_benchmark.py  push_to_git.sh  register_decision_node.py  register_mission_node.py  register_planner.py  register_spray_node.py  register_watchdog_node.py  remediate_structure.sh  requirements.txt  ros2_ci.yml  (+14 more)
src/hexacopter_camera/: camera_node.py  package.xml  setup.cfg  setup.py
src/hexacopter_control/: flight_controller.py  package.xml  setup.cfg  setup.py
src/hexacopter_control/hexacopter_control/: flight_controller.py  mission_sprayer.py
src/hexacopter_control/launch/: launch_drone.launch.py
src/hexacopter_control/models/hexacopter/: model.config  model.sdf
src/hexacopter_control/models/hexacopter_agricultural/: model.config  model.sdf
src/hexacopter_control/worlds/: bihar_farm.sdf  bihar_farm.world
src/sensor_fusion/: package.xml  setup.py
src/yolov8_detection/: coverage_planner.py  detection_node.py  package.xml  setup.py  test_coverage.py
src/yolov8_detection/yolov8_detection/: detection_node.py  thermal_ai_node.py
(+39 files in other folders)
