<?xml version="1.0"?>
<package format="3">
  <name>hexacopter_control</name>
  <version>1.0.0</version>
  <description>MAVSDK flight controller</description>
  <maintainer email="uav@agri.com">UAV Agri</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
</package>
