<?xml version="1.0"?>
<package format="3">
  <name>yolov8_detection</name>
  <version>1.0.0</version>
  <description>YOLOv8 object detection</description>
  <maintainer email="uav@agri.com">UAV Agri</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_python</buildtool_depend>
</package>
